--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -27,6 +27,9 @@ RUN curl -sSL https://get.docker.com | sh
 RUN curl -sSL https://raw.githubusercontent.com/docker/docker/${DIND_COMMIT}/hack/dind -o /usr/local/bin/dind \
     && chmod a+x /usr/local/bin/dind
 
+RUN curl -sSL https://github.com/docker/compose/releases/download/1.9.0-rc2/docker-compose-`uname -s`-`uname -m` -o /usr/local/bin/docker-compose \
+    && chmod a+x /usr/local/bin/docker-compose
+
 COPY ./wrapper.sh /usr/local/bin/wrapper.sh
 RUN chmod a+x /usr/local/bin/wrapper.sh
 
