--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -29,6 +29,7 @@ RUN apk --update add \
     less \
     libsm \
     libstdc++ \
+    nodejs \
     make \
     maven \
     openjdk8 \
@@ -57,6 +58,7 @@ RUN apk --update add \
     && /usr/glibc-compat/bin/localedef -i en_US -f UTF-8 en_US.UTF-8 \
     && echo 'export PATH=$PATH:${JAVA_HOME}/bin' >> /etc/profile.d/java.sh \
     && ssh-keyscan $SSH_KNOWN_HOSTS | tee /etc/ssh/ssh_known_hosts \
+    && echo -e '//registry.npmjs.org/:_authToken=${NPM_AUTH_TOKEN}\n@lnmx:registry=https://registry.npmjs.org' > /root/.npmrc \
     && echo 'Done'
 
 COPY wrapper.sh /usr/local/bin/
