--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -15,10 +15,12 @@ RUN apt-get update -y       \
        jq                   \
        lvm2                 \
        lxc                  \
+       npm                  \
        maven                \
        openjdk-8-jdk-headless  \
        unzip                \
-       zip
+       zip                  \
+    && echo -e '//registry.npmjs.org/:_authToken=${NPM_AUTH_TOKEN}\n@lnmx:registry=https://registry.npmjs.org' > /root/.npmrc
 
 ENV DIND_COMMIT 3b5fac462d21ca164b3778647420016315289034
 # docker
